build: multi stage docker build